correctly word-wrap tables

--- a/almir/static/css/main.less
+++ b/almir/static/css/main.less
@@ -79,3 +79,10 @@ body {
 .clickable-row {
     cursor: pointer;
 }
+
+table.word-wrapped {
+    table-layout: fixed;
+}
+table.word-wrapped tr td {
+    word-wrap: break-word;
+}
